fix css map z-index

--- a/client/src/components/NewHikeForm/styles/mobile.module.scss
+++ b/client/src/components/NewHikeForm/styles/mobile.module.scss
@@ -87,15 +87,6 @@
   }
 }
 
-
-.mapContainer{
-  width: 100%;
-  height: 500px;
-  border: 1px solid $tertiary-green;
-  border-radius: 5px;
-  z-index: 0;
-}
-
 .feedbackContainer {
   width: 100%;
   margin-top: 0.25rem;
